--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="find_id">가입시 등록하신 이름과 이메일을 입력하면 아이디를 알려드립니다.</string>
     <string name="find_pw">가입시 등록하신 아이디와 이메일을 입력하면 비밀번호 재설정을 할 수 있습니다.</string>
     <string name="set_pw">새로운 비밀번호를 설정해주세요.</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
